# microduck_runtime

./: .gitignore  BAUDRATE_CHANGE.md  Cargo.toml  Cross.toml  GYRO_SPIKE_FILTERING.md  IMITATION_POLICY_CHANGES.md  IMU_DEBUG_GUIDE.md  README.md  RELEASE_NOTES.md  SETUP_GITHUB.md  TRAINING_CONSISTENCY_CHECK.md  build.rs  check_voltage.py  em.py  init.py  install.sh  placo_walk.py
.cargo/: config.toml
.github/: cross-aarch64.Dockerfile
.github/workflows/: build-cross-image.yml  release.yml
assets/microduck/: placo_defaults.json
examples/: debug_imu.rs  test_imu.rs
fk/: main.py  microduck_fk.py  odometry.py  odometry_server.py  pyproject.toml  robot.urdf  robot_walk.xml  scene.xml  viewer.py
fk/assets/: 85mm_link.part  85mm_link.stl  alt_ball.part  alt_ball.stl  ball_joint_insert.part  ball_joint_insert.stl  battery_tighten.part  battery_tighten.stl  bearing.part  bottom_shell.part  bottom_shell.stl  camera_spacer.part  camshaft.part  crossmember.part  elec_rpi_robot_hat_pcb.part  elec_rpi_robot_hat_pcb.stl  electronics_hub.part  electronics_hub.stl  foot.part  foot_tpu_bottom.part  head_base_plate.part  head_base_plate.stl  head_pitch_to_yaw.part  head_top.part  head_yaw_to_roll.part  jack.part  jumper.part  left_roll_to_pitch.part  leg_plate.part  long_neck_plate1.part  long_neck_plate2.part  mouth.part  neck_reinforcement.part  np_f550_holder.part  np_f970.part  np_f970.stl  part_1.part  part_1.stl  part_2.part  part_2.stl  (+32 more)
policies/: ground_pick.onnx  standing.onnx  standup.onnx  walking.onnx
policies/new_policies/: groundpick_rollback_4000.onnx  m6_rollback_groundpick.onnx  m6_rollback_standup.onnx  m6_rollback_walk.onnx  standup_gentle_more_range.onnx  standup_rollback_2000.onnx  standup_rollback_4000.onnx  vel_noise_walk.onnx  walk_rollback_2000.onnx  walk_rough_1500.onnx
policies/old_policies/: ground_pick.onnx  standing.onnx  standing_body_control.onnx
rpi_setup/: .bashrc  aic3104-init.service  aic3104-init.sh  config.txt  config_test.txt  microduck_runtime.service  setup.md  tlv320aic3104.dtbo
scripts/: get_knee_data_real.py
src/: camera.rs  controller.rs  imu.rs  lib.rs  main.rs  maploc.rs  motor.rs  observation.rs  odometry.rs  policy.rs  tof.rs
