[package]
name = "microduck_runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "microduck_runtime"
path = "src/lib.rs"

[[bin]]
name = "microduck_runtime"
path = "src/main.rs"

[[bin]]
name = "test_imu"
path = "src/bin/test_imu.rs"

[[bin]]
name = "test_i2c_raw"
path = "src/bin/test_i2c_raw.rs"

[[bin]]
name = "debug_imu"
path = "src/bin/debug_imu.rs"

[[bin]]
name = "test_imu2"
path = "src/bin/test_imu2.rs"

[[bin]]
name = "test_imu3"
path = "src/bin/test_imu3.rs"

[[bin]]
name = "debug_imu_observations"
path = "src/bin/debug_imu_observations.rs"

[[bin]]
name = "debug_motor_speed"
path = "src/bin/debug_motor_speed.rs"

[[bin]]
name = "debug_policy_io"
path = "src/bin/debug_policy_io.rs"

[[bin]]
name = "calibrate_imu"
path = "src/bin/calibrate_imu.rs"

[[bin]]
name = "test_imu_latency"
path = "src/bin/test_imu_latency.rs"

[[bin]]
name = "test_imu_fusion_latency"
path = "src/bin/test_imu_fusion_latency.rs"

[dependencies]
rustypot = "1.4.2"
ort = { version = "2.0.0-rc.11", features = ["load-dynamic"], default-features = false }
anyhow = "1.0"
ctrlc = "3.4"
serialport = "4.8"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
ndarray = "0.15"
bno055 = "0.4"
linux-embedded-hal = "0.4"
